@@ -4665,7 +4665,7 @@ st_collections_group_parts_part_description_fixed(void)
 
         When min is defined to SOURCE, it will look at the original
         image size and enforce it minimal size to match at least the
-        original one. The part must be an IMAGE part.
+        original one. The part must be an IMAGE or a GROUP part.
     @endproperty
 */
 static void
@@ -4677,21 +4677,19 @@ st_collections_group_parts_part_description_min(void)
       current_desc->min.w = parse_float_range(0, 0, 0x7fffffff);
       current_desc->min.h = parse_float_range(1, 0, 0x7fffffff);
    } else {
-      Edje_Part_Description_Image *desc;
       char *tmp;
 
       tmp = parse_str(0);
-      if (current_part->type != EDJE_PART_TYPE_IMAGE ||
+      if ((current_part->type != EDJE_PART_TYPE_IMAGE && current_part->type != EDJE_PART_TYPE_GROUP) ||
           !tmp || strcmp(tmp, "SOURCE") != 0)
         {
            ERR("%s: Error. parse error %s:%i. "
-               "Only IMAGE part can have a min: SOURCE; defined",
+               "Only IMAGE and GROUP part can have a min: SOURCE; defined",
                progname, file_in, line - 1);
            exit(-1);
         }
 
-      desc = (Edje_Part_Description_Image *) current_desc;
-      desc->image.min.limit = EINA_TRUE;
+      current_desc->min.limit = EINA_TRUE;
    }
 }
 
@@ -4739,7 +4737,6 @@ st_collections_group_parts_part_description_max(void)
       current_desc->max.w = parse_float_range(0, -1.0, 0x7fffffff);
       current_desc->max.h = parse_float_range(1, -1.0, 0x7fffffff);
    } else {
-      Edje_Part_Description_Image *desc;
       char *tmp;
 
       tmp = parse_str(0);
@@ -4752,8 +4749,7 @@ st_collections_group_parts_part_description_max(void)
            exit(-1);
         }
 
-      desc = (Edje_Part_Description_Image *) current_desc;
-      desc->image.max.limit = EINA_TRUE;
+      current_desc->max.limit = EINA_TRUE;
    }
 }
 
